--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "sqlite3": "^4.1.1"
   },
   "devDependencies": {
-    "nodemon": "^2.0.2"
+    "jest": "^25.2.2",
+    "nodemon": "^2.0.2",
+    "supertest": "^4.0.2"
   },
-  "jest":{
+  "jest": {
     "testEnvironment": "node"
   }
 }
